--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
 
   <title>Frontend Mentor | News homepage</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Rubik:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap" rel="stylesheet">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -23,18 +25,24 @@
         <img src="logo.svg" alt="">
       </div>
       <div class="navigation-components">
-        <p>
-          New
-          Popular
-          Trending
-          Categories 
-        </p>
+          <div class="nav-tags">
+            New
+          </div>
+          <div class="nav-tags">
+            Popular
+          </div>
+          <div class="nav-tags">
+            Trending
+          </div>
+          <div class="nav-tags">
+            Categories
+          </div>
       </div>
     </nav>
     <div class="main-content">
       <div class="main-info">
         <div class="main-img">
-          <img src="image-web-3-desktop.jpg" alt="">
+          <img src="image-web-3-desktop.jpg" alt="" style="width:100%; height:100%;">
         </div>
         <div class="article">
           <div class="headline">
@@ -43,7 +51,7 @@
           <div class="article-info">
             <h1>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
               But is it really fulfilling its promise?</h1> 
-            <button>Read more</button>
+            <button class="red_btn">READ MORE</button>
           </div>
         </div>
       </div>
@@ -52,16 +60,19 @@
             New
           </div>
           <div class="news-content">
-            <h2>Hydrogen VS Electric Cars
-              Will hydrogen-fueled cars ever catch up to EVs?</h2>
+            <span>Hydrogen VS Electric Cars </span>
+
+            <h2 class="h2-line">Will hydrogen-fueled cars ever catch up to EVs?</h2>
           </div>
           <div class="news-content">
-            <h2>The Downsides of AI Artistry
-              What are the possible adverse effects of on-demand AI image generation?</h2>
+            <span>The Downsides of AI Artistry</span>
+
+            <h2 class="h2-line">What are the possible adverse effects of on-demand AI image generation?</h2>
           </div>
           <div class="news-content">
-            <h2>Is VC Funding Drying Up?
-              Private funding by VC firms is down 50% YOY. We take a look at what that means.</h2>
+            <span>Is VC Funding Drying Up? </span>
+            
+            <h2 class="h2-line h2-last">Private funding by VC firms is down 50% YOY. We take a look at what that means.</h2>
           </div>
       </div>
     </div>
