--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
           <div class="nav-tags">
             Categories
           </div>
+          <div class="phone-nav-tag">
+            <svg width="40" height="17" xmlns="http://www.w3.org/2000/svg"><g fill="#00001A" fill-rule="evenodd"><path d="M0 0h40v3H0zM0 7h40v3H0zM0 14h40v3H0z"/><path d="M0 0h40v3H0z"/></g></svg>
+          </div>
       </div>
     </nav>
     <div class="main-content">
